# mtcnn-as

app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: mtcnn.h
app/src/main/java/com/mtcnn_as/: MTCNN.java  MainActivity.java
app/src/main/res/layout/: main.xml
gradle/wrapper/: gradle-wrapper.properties
